@@ -183,8 +183,8 @@ func Save(r *http.Request, w http.ResponseWriter) error {
 }
 
 // NewCookie returns an http.Cookie with the options set. It also sets
-// the Expires field calculated based on the options.MaxAge value, if set, for
-// Internet Explorer compatibility.
+// the Expires field calculated based on the MaxAge value, for Internet
+// Explorer compatibility.
 func NewCookie(name, value string, options *Options) *http.Cookie {
 	cookie := &http.Cookie{
 		Name:     name,
@@ -198,6 +198,9 @@ func NewCookie(name, value string, options *Options) *http.Cookie {
 	if options.MaxAge > 0 {
 		d := time.Duration(options.MaxAge) * time.Second
 		cookie.Expires = time.Now().Add(d)
+	} else if options.MaxAge < 0 {
+		// Set it to the past to expire now.
+		cookie.Expires = time.Unix(1, 0)
 	}
 	return cookie
 }
